<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.MainActivity"
    >

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
  >
    <TableRow
        android:id="@+id/first_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <Button
            android:id="@+id/wyp_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/wyp"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/zwr_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/zwr"
            android:textAlignment="center"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/second_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <Button
            android:id="@+id/it_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/it"
            android:textSize="18sp" />

        <Button
            android:id="@+id/us_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"

            android:text="@string/us"
            android:textSize="18sp" />
    </TableRow>

</TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>