<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.item.ItDelPage">

    <TextView
        android:id="@+id/ItDelAceIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/ItDelDesIt"
        app:layout_constraintTop_toBottomOf="@+id/ItDelHeaderText" />

    <TextView
        android:id="@+id/ItDelDesIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/ItDelIdIt"
        app:layout_constraintTop_toBottomOf="@+id/ItDelHeaderText" />

    <TextView
        android:id="@+id/ItDelHeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ItDelQueText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/delitemque"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItDelHeaderText" />

    <TextView
        android:id="@+id/ItDelNameIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/additemname"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItDelQueText" />

    <TextView
        android:id="@+id/ItDelIdIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItDelHeaderText" />

    <Button
        android:id="@+id/ItDelYesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/yes"
        app:layout_constraintEnd_toStartOf="@+id/ItDelNoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItDelNameIt" />

    <Button
        android:id="@+id/ItDelNoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ItDelYesButton"
        app:layout_constraintTop_toBottomOf="@+id/ItDelNameIt" />
</androidx.constraintlayout.widget.ConstraintLayout>